--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<hadoop.version>2.6.0</hadoop.version>
+		<hadoop.core.version>1.0.0</hadoop.core.version>
 		<spring.hadoop.version>2.4.0.RELEASE</spring.hadoop.version>
 		<hbase.version>1.2.2</hbase.version>
 	</properties>
@@ -52,12 +53,7 @@
 		    <artifactId>spring-data-hadoop-config</artifactId>
 		    <version>${spring.hadoop.version}</version>
 		</dependency>
-		<!-- <dependency>
-		    <groupId>org.apache.hadoop</groupId>
-		    <artifactId>hadoop-common</artifactId>
-		    <version>2.6.2</version>
-		</dependency> -->
-        
+
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-client</artifactId>
@@ -78,6 +74,11 @@
               <artifactId>hbase-protocol</artifactId>
               <version>${hbase.version}</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>${hadoop.core.version}</version>
+		</dependency>
         <dependency>
               <groupId>org.apache.hadoop</groupId>
               <artifactId>hadoop-client</artifactId>
@@ -95,22 +96,17 @@
         </dependency>
 		
 		<!-- Hadoop and Hbase End -->
-		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.21</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-compiler-2.2</artifactId>
-			<version>2.2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
