Added spring boot actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+#ACTUATOR END POINT
+endpoints.info.id=info
+endpoints.info.sensitive=false
+endpoints.info.enabled=true
+info.app.name=Spring Actuator Example
+info.app.description=Spring Actuator Working Examples
+info.app.version=0.0.1-SNAPSHOT
+
 hbase.master=192.168.0.112:60000
 hbase.zookeeper.property.clientPort=2181
 hbase.zookeeper.quorum=192.168.0.112
