Sending file and json object together to service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,13 @@ info.app.name=Spring Actuator Example
 info.app.description=Spring Actuator Working Examples
 info.app.version=0.0.1-SNAPSHOT
 
+multipart.maxFileSize=-1
+multipart.maxRequestSize=-1
+
 hbase.master=192.168.0.112:60000
 hbase.zookeeper.property.clientPort=2181
 hbase.zookeeper.quorum=192.168.0.112
 hdfs.path=hdfs://192.168.0.112:9000/
 hadoop.home.dir=/home/hadoop/hadoop/
+hdfs.media.image.path=hdfs://192.168.0.112:9000/media/image/
+hdfs.media.video.path=hdfs://192.168.0.112:9000/media/video/
