--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
 		<hadoop.core.version>1.0.0</hadoop.core.version>
 		<spring.hadoop.version>2.4.0.RELEASE</spring.hadoop.version>
 		<hbase.version>1.2.2</hbase.version>
+		<common.upload>1.3.2</common.upload>
+		<org.slf4j>1.7.21</org.slf4j>
+		<commons.io>2.5</commons.io>
 	</properties>
 
 	<dependencies>
@@ -103,8 +106,20 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.21</version>
+			<version>${org.slf4j}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${common.upload}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons.io}</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
