getting image from HDFS and displaying on UI - Done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ hbase.zookeeper.property.clientPort=2181
 hbase.zookeeper.quorum=192.168.0.112
 hdfs.path=hdfs://192.168.0.112:9000/
 hadoop.home.dir=/home/hadoop/hadoop/
-hdfs.media.image.path=hdfs://192.168.0.112:9000/media/image/
-hdfs.media.video.path=hdfs://192.168.0.112:9000/media/video/
+hdfs.media.image.path=/media/image/
+hdfs.media.video.path=/media/video/
